# blackbook

./: .env.example  .gitignore  14_DAY_EXECUTION_PLAN.md  ALGORITHM_NOTES.md  DEPLOY-COMMANDS.md  DEPLOYMENT.md  PROJECT_ACCOMPLISHMENTS.md  QUICKSTART.md  README.md  SETUP.md  add_photos_column.sql  apply_patch.py  backup.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  footer.html  init_db.sql  install_backup_cron.sh  migrate_photos_to_r2.sh  new.html  nginx.conf  profile.html  server-setup.sh  test_recommendations.py  verify_callback_flow.sh
web/: Dockerfile  config.py  database.py  debug_seed.py  fix_phones.py  main.py  migrate_and_seed.py  payment_queue_utils.py  payment_tasks.py  pyproject.toml  requirements.txt
web/migrations/: 20260212_schema_alignment.sql  20260217_free_trial_support.sql  20260217_lead_analytics.sql  20260217_trial_retention_flags.sql  20260218_provider_portal.sql  20260219_portal_approval_hardening.sql  20260222_provider_profile_detail_fields.sql  20260223_portal_email_auth.sql  20260223_portal_password_reset.sql  20260225_expand_neighborhood_column.sql  20260226_unique_portal_username.sql  20260227_add_provider_stories.sql
web/routes/: __init__.py  admin_ops.py  api.py  payments.py  portal_actions.py  portal_auth.py  portal_dashboard.py  portal_onboarding.py  public.py
web/scripts/: migrate_local_photos_to_r2.py  seed_dummy_portal_provider.py
web/services/: __init__.py  email_service.py  metapay.py  redis_service.py  storage_service.py  telegram_service.py
web/templates/: _grid.html  _recommendations.html  _skeleton.html  (+21 more)
(+115 files in other folders)
